--- a/config/settings.yml
+++ b/config/settings.yml
@@ -5,6 +5,7 @@ site:
   copyright_period_start: "2013"
   header_message: "Welcome to the District's Health Insurance Marketplace"
   logo_file_name: "logo.png"
+  mailer_logo_file_name: "dchealthlink.jpg"
   home_url: "https://www.dchealthlink.com/"
   home_forms_url: "https://dchealthlink.com/forms"
   forms_name: "DCHealthLink.com/forms"
