--- a/config/settings.yml
+++ b/config/settings.yml
@@ -116,12 +116,12 @@ aca:
 paper_notice: 'paper-notices'
 # Note: Remote Aceess keys ad URL's Provided by DC checkbook
 
-individual_checkbook_services:
+consumer_checkbook_services:
 # Note: Need to replace Remote_access_key with Production keys while deploying to prod.
 # Note: currently using Shop Remote Access Keys/URLS for IVL also this needs to be changed once we get Keys and Url's from Checkbook Team
-    ivl_remote_access_key: 'cd535a89-49ea-4ea6-862f-e9558e8bef50'
-    ivl_reference_id: "7C6B483A605640B98DEE8EBB7ED8DAA7"
-    ivl_base_url: "https://staging.checkbookhealth.org/hie/dc/api/" 
+    consumer_remote_access_key: 'cd535a89-49ea-4ea6-862f-e9558e8bef50'
+    consumer_reference_id: "7C6B483A605640B98DEE8EBB7ED8DAA7"
+    base_url: "https://staging.checkbookhealth.org/hie/dc/api/" 
 
 checkbook_services:
 # Note: Need to replace Remote_access_key with Production keys while deploying to prod.
