Refs #19392 Adding Dental CB url and year- CB

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -138,6 +138,7 @@ consumer_checkbook_services:
     consumer_reference_id: "9F03A78ADF324AFDBFBEF8E838770132"
     # base_url: "https://staging.checkbookhealth.org/hie/dc/api?environment=dev" #Environment should be changed according to current environment RE #19392 (#24)
     base_url: "https://staging.checkbookhealth.org/hie/dc/api?environment=test"
+    current_year: 2019
 
 checkbook_services:
 # Note: Need to replace Remote_access_key with Production keys while deploying to prod.
