Refs #19392 adding param to callback from checkbook-CB

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -139,6 +139,8 @@ consumer_checkbook_services:
     # base_url: "https://staging.checkbookhealth.org/hie/dc/api?environment=dev" #Environment should be changed according to current environment RE #19392 (#24)
     base_url: "https://staging.checkbookhealth.org/hie/dc/api?environment=test"
     current_year: 2019
+    dental_prod_url: "https://dc.checkbookhealth.org/sadpi/dc/2019/"
+    dental_stage_url: "https://staging.checkbookhealth.org/sadpi/DC/2019/"
 
 checkbook_services:
 # Note: Need to replace Remote_access_key with Production keys while deploying to prod.
