--- a/config/settings.yml
+++ b/config/settings.yml
@@ -132,12 +132,12 @@ paper_notice: 'paper-notices'
 # Note: Remote Aceess keys ad URL's Provided by DC checkbook
 
 consumer_checkbook_services:
-# Note: Need to replace Remote_access_key with Production keys while deploying to prod.
-# Note: currently using Shop Remote Access Keys/URLS for IVL also this needs to be changed once we get Keys and Url's from Checkbook Team
+
     consumer_remote_access_key: 'cd535a89-49ea-4ea6-862f-e9558e8bef50'
+    # consumer_remote_access_key: '881db54c-44a9-11e8-98e2-fc4dd43da58e'  #This should be used in the production as remote_access_key
     consumer_reference_id: "9F03A78ADF324AFDBFBEF8E838770132"
-    # base_url: "https://staging.checkbookhealth.org/hie/dc/api?environment=dev" #Environment should be changed according to current environment RE #19392 (#24)
     base_url: "https://staging.checkbookhealth.org/hie/dc/api?environment=production"
+    # base_url: "https://dc.checkbookhealth.org/hie/dc/api?environment=production" #Production Environment should be updated with this url
     current_year: 2019
     previous_year: 2018
     dental_prod_url: "https://dc.checkbookhealth.org/sadpi/dc/2019/"
@@ -145,7 +145,6 @@ consumer_checkbook_services:
     checkbook_previous_year: "https://dc.checkbookhealth.org/hie/dc/2018/"
 
 checkbook_services:
-# Note: Need to replace Remote_access_key with Production keys while deploying to prod.
     remote_access_key: 'cd535a89-49ea-4ea6-862f-e9558e8bef50'
     reference_id: "9F03A78ADF324AFDBFBEF8E838770132"
     base_url:  "https://staging.checkbookhealth.org"
