--- a/config/settings.yml
+++ b/config/settings.yml
@@ -15,6 +15,8 @@ site:
   healthcare_name: "www.healthcare.gov"
   healthcare_url: "https://www.healthcare.gov/"
   irs_url: "https://www.irs.gov/"
+  website_url: "https://www.healthcare.gov"
+  forms: "https://dchealthlink.com/forms#en"
 
   social_media:
     facebook_url: ""
