--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1,5 +1,5 @@
 site:
-  key: :cca
+  key: :dc
   subdomain: "mhc"
   domain_name: "hbxshop.org"
   site_title: "Massachusetts Health Connector for Business"
@@ -144,7 +144,7 @@ aca:
   minimum_primary_contribution_percentage: 50
   minimum_family_contribution_percentage: 30
   address_query_county: true
-  broker_routing_information: true
+  broker_routing_information: false
   recaptcha_enabled: false
   security_questions: true
   user_accounts_enabled: true
@@ -264,8 +264,8 @@ aca:
     transmit_scheduled_employers: true
     employer_transmission_day_of_month: 27
   transmit_employers_immediately: false
-  employer_has_sic_field: true
-  validate_county: true
+  employer_has_sic_field: false
+  validate_county: false
 
   use_simple_employer_calculation_model: false
   carrier_special_plan_identifier_namespace: "urn:MA:terms:v1:plan:super_group_id#"
