--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -5,7 +5,7 @@ development:
     default: &default_development
       # Defines the name of the default database that Mongoid can connect to.
       # (required).
-      database: mhc_enroll_development
+      database: enroll_development
       # Provides the hosts the default session can connect to. Must be an array
       # of host:port pairs. (required)
       hosts:
@@ -64,7 +64,7 @@ development:
 test:
   clients:
     default:
-      database: mhc_enroll_test<%= ENV['TEST_ENV_NUMBER'] %>
+      database: enroll_test<%= ENV['TEST_ENV_NUMBER'] %>
       hosts:
         - localhost:27017
       options:
@@ -75,7 +75,7 @@ test:
 production:
   clients:
     default:
-      database: mhc_enroll_production
+      database: enroll_production
       hosts:
         - localhost:27017
       options:
