--- a/config/settings.yml
+++ b/config/settings.yml
@@ -96,10 +96,10 @@ contact_center:
     complaint_url: "https://www.hhs.gov/civil-rights/filing-a-complaint"
 
 plan_option_titles:
-  sole_source: 'One Plan'
-  metal_level: 'One Level'
-  single_carrier: 'One Carrier'
-  single_plan: 'One Plan'
+  sole_source: 'Single Plan'
+  metal_level: 'By Metal Level'
+  single_carrier: 'By Carrier'
+  single_plan: 'Single Plan'
   plan_year_tooltip: "Employer premium contribution for Employee Only Health Plans must be at least"
 
 plan_option_descriptions:
@@ -269,7 +269,7 @@ aca:
 
   use_simple_employer_calculation_model: false
   carrier_special_plan_identifier_namespace: "urn:MA:terms:v1:plan:super_group_id#"
-  offerings_constrained_to_service_areas: true
+  offerings_constrained_to_service_areas: false
   employer_attestation: true
   enforce_employer_attestation: true
   plan_match_tool: false
