Refs #38069 adding base url for congress to work in hotfix

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -135,6 +135,7 @@ checkbook_services:
     current_year: 2019
     previous_year: 2018
     plan_match: "DC"
+    checkbook_services_congress_url: = "https://staging.checkbookhealth.org/congress/dc/api?environment=test" # This Needs to go to Chef
 
 aptc_errors:
   effective_date_overflow: "Updates not allowed at this time. Effective Date happens to be after the Policy's life (next year) when following the 15th day rule."
