--- a/config/settings.yml
+++ b/config/settings.yml
@@ -33,7 +33,7 @@ site:
   broker_claim_quoting_enabled: true
   guidance_for_business_owners_url: "https://www.mahealthconnector.org/help-center-answers/guidance-for-business-owners"
   use_default_devise_path: true
-  plan_options_title_for_ma: true
+  plan_options_title_for_ma: false
   create_routes: ['/insured/employee/privacy','/employers/employer_profiles/new']
   sign_in_routes: ['/families/home']
   shop_find_your_doctor_url: "https://ma.checkbookhealth.org/mashop"
@@ -149,10 +149,10 @@ aca:
   security_questions: true
   user_accounts_enabled: true
   admin_actions_available: ["reset_password", "unlock_or_lock_account", "view_login_history"]
-  plan_options_available: ["sole_source", "single_carrier", "metal_level"]
-  dental_plan_options_available: ["single_plan"]
+  plan_options_available: ["single_plan", "single_carrier", "metal_level"]
+  dental_plan_options_available: ["single_carrier", "custom"]
   ## acceptable options are ["sole_source", "single_carrier", "metal_level", "single_plan"]
-  enabled_metal_levels_for_single_carrier: ["silver", "gold", "dental"]
+  enabled_metal_levels_for_single_carrier: ["silver", "gold", "bronze", "platinum", "dental"]
   carrier_hios_logo_variant:
     '': ""
   ## acceptable options are ["platinum", "gold", "silver", "dental"]
@@ -267,20 +267,14 @@ aca:
   employer_has_sic_field: false
   validate_county: false
 
-  use_simple_employer_calculation_model: false
+  use_simple_employer_calculation_model: true
   carrier_special_plan_identifier_namespace: "urn:MA:terms:v1:plan:super_group_id#"
   offerings_constrained_to_service_areas: false
   employer_attestation: true
   enforce_employer_attestation: true
   plan_match_tool: false
   rating_areas:
-    - R-MA001
-    - R-MA002
-    - R-MA003
-    - R-MA004
-    - R-MA005
-    - R-MA006
-    - R-MA007
+  - nil
 
 notices:
   individual_market:
