--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1,9 +1,9 @@
 site:
-  key: :cca
-  subdomain: "mhc"
+  key: :dc
+  subdomain: "dc"
   domain_name: "hbxshop.org"
-  site_title: "Massachusetts Health Connector for Business"
-  home_url: "https://business.mahealthconnector.org/"
+  site_title: "DC's Online Health Insurance Marketplace"
+  home_url: "https://www.dchealthlink.com/"
   home_business_url: "https://www.mahealthconnector.org/business/"
   help_url: "https://www.mahealthconnector.org/business/help-center"
   faqs_url: "https://www.mahealthconnector.org/business/help-center/faqs"
@@ -14,16 +14,16 @@ site:
   invoice_bill_url: "https://ww2.e-billexpress.com/ebpp/maconnector/"
   payment_pdf_url: "https://www.mahealthconnector.org/help-center-answers/how-to-pay-your-premiums-online"
   user_sign_in_url: "https://business.mahealthconnector.org/users/sign_in"
-  website_name: "MAhealthconnector.org"
-  main_web_address: "www.MAhealthconnector.org"
+  website_name: "www.DCHealthLink.com"
+  main_web_address: "www.healthcare.org"
   health_care_website: "www.healthcare.gov"
   health_care_website_url: "https://www.healthcare.gov"
-  short_name: "Health Connector"
-  byline: "The Right Place for the Right Plan"
+  short_name: "DC Health Link"
+  byline: "DC's Online Health Insurance Marketplace"
   long_name: "Massachusetts Health Connector"
-  copyright_period_start: "2017"
+  copyright_period_start: "2013"
   header_message: "The Right Place for the Right Plan"
-  logo_file_name: "mhc_logo.svg"
+  logo_file_name: "logo.svg"
   make_their_premium_payments_online: "https://ww2.e-billexpress.com/ebpp/MAConnector/"
   tab_icon: 'favicon.ico'
   mailer_logo_file_name: "health_connector.png"
@@ -51,22 +51,23 @@ site:
   privacy_policy: "https://www.mahealthconnector.org/site-policies/privacy-policy"
   late_rates_message: "Premiums for some coverage effective dates are not yet available. Premiums are typically ready for employers at least 30 days before your coverage starts, and often sooner than that. Please check back again soon to see if premium rates are available, or call customer service if you need more additional assistance."
 
-  exchange_name: "Massachusetts Health Connector"
+  exchange_name: "DC Health Link"
   social_media:
     facebook_url: ""
 
 contact_center:
-  name: "Health Connector's Customer Care Center"
-  alt_name: "Health Connector Customer Service"
-  phone_number: "1-888-813-9220"
+  name: "DC Health Link's Customer Care Center"
+  alt_name: "DC Health Link Customer Service"
+  phone_number: "1-855-532-5465"
+  tty_number: "1-855-532-5465"
+  tty: "771"
+  alt_phone_number: "1-855-532-LINK"
+  email_address: "info@dchealthlink.com"
   fax: "1-617-933-3099"
   alt_fax: "617-722-4033"
-  tty_number: "711"
-  alt_phone_number: "1-888-813-9220"
   payment_phone_number: "1-888-813-9220"
   ivl_number: "1-877-623-6765"
   ivl_phone_number: "1-877-623-6765"
-  email_address: "smallbusiness@mahealthconnector.org"
   small_business_email: "smallbusiness@MAhealthconnector.org"
   non_discrimination_email: "Nondiscrimination@state.ma.us"
 
@@ -131,12 +132,12 @@ invoices:
   addendum: 'ma_non_discrimination_and_language_tags.pdf'
 
 aca:
-  state_name: "Massachusetts"
-  state_abbreviation: "MA"
-  market_kinds: ["shop"]
+  state_name: "District of Columbia"
+  state_abbreviation: "DC"
+  market_kinds: ["individual", "shop"]
   hbx_abbreviation: "DC Health Benefit Exchange"
   nationwide_markets: false
-  general_agency_enabled: false
+  general_agency_enabled: true
   broker_carrier_appointments_enabled: true
   dental_market_enabled: true
   calendar_enabled: true
@@ -146,7 +147,7 @@ aca:
   address_query_county: true
   broker_routing_information: true
   recaptcha_enabled: false
-  security_questions: true
+  security_questions: false
   user_accounts_enabled: true
   admin_actions_available: ["reset_password", "unlock_or_lock_account", "view_login_history"]
   plan_options_available: ["sole_source", "single_carrier", "metal_level"]
@@ -187,9 +188,9 @@ aca:
     small_market_employee_count_maximum: 50
     employer_contribution_percent_minimum: 50
     employer_family_contribution_percent_minimum: 33
-    employee_participation_ratio_minimum: <%= 3 / 4.0 %>
+    employee_participation_ratio_minimum: <%= 2 / 3.0 %>
     non_owner_participation_count_minimum: 1
-    binder_payment_due_on: 23
+    binder_payment_due_on: 12
     small_market_active_employee_limit: 200
     new_employee_paper_application: true
     census_employees_template_file: 'Health Connector - Employee Census Template'
@@ -206,10 +207,10 @@ aca:
       days: -60
 
     initial_application:
-      publish_due_day_of_month: 15
+      publish_due_day_of_month: 5
       advertised_deadline_of_month: 10
       earliest_start_prior_to_effective_on:
-        months: -2
+        months: -3
         day_of_month: 0
       appeal_period_after_application_denial:
         days: 30
@@ -218,22 +219,22 @@ aca:
         days: 90
       quiet_period:
         month_offset: 0
-        mday: 8
+        mday: 28
 
     renewal_application:
       earliest_start_prior_to_effective_on:
-        months: -2
+        months: -3
         day_of_month: 0
-      monthly_open_enrollment_end_on: 20
-      publish_due_day_of_month: 15
+      monthly_open_enrollment_end_on: 13
+      publish_due_day_of_month: 10
       application_submission_soft_deadline: 10
-      force_publish_day_of_month: 16
+      force_publish_day_of_month: 11
       open_enrollment:
         minimum_length:
-          days: 5
+          days: 3
       quiet_period:
         month_offset: -1
-        mday: 26
+        mday: 15
 
     benefit_period:
       length_minimum:
@@ -243,7 +244,7 @@ aca:
 
     open_enrollment:
       monthly_start_on: 1
-      monthly_end_on: 20
+      monthly_end_on: 10
 
       minimum_length:
         days: 5
@@ -262,7 +263,7 @@ aca:
       minimum_commission_statement_year: 2017
 
     transmit_scheduled_employers: true
-    employer_transmission_day_of_month: 27
+    employer_transmission_day_of_month: 16
   transmit_employers_immediately: false
   employer_has_sic_field: true
   validate_county: true
