--- a/config/settings.yml
+++ b/config/settings.yml
@@ -271,8 +271,8 @@ aca:
   use_simple_employer_calculation_model: false
   carrier_special_plan_identifier_namespace: "urn:MA:terms:v1:plan:super_group_id#"
   offerings_constrained_to_service_areas: true
-  employer_attestation: true
-  enforce_employer_attestation: true
+  employer_attestation: false
+  enforce_employer_attestation: false
   plan_match_tool: false
   rating_areas:
     - R-MA001
