--- a/config/settings.yml
+++ b/config/settings.yml
@@ -23,7 +23,7 @@ site:
   long_name: "Massachusetts Health Connector"
   copyright_period_start: "2013"
   header_message: "The Right Place for the Right Plan"
-  logo_file_name: "logo.svg"
+  logo_file_name: "dchealthlink.jgp"
   make_their_premium_payments_online: "https://ww2.e-billexpress.com/ebpp/MAConnector/"
   tab_icon: 'favicon.ico'
   mailer_logo_file_name: "health_connector.png"
@@ -144,7 +144,7 @@ aca:
   dental_plan_years_available: [""]
   minimum_primary_contribution_percentage: 50
   minimum_family_contribution_percentage: 30
-  address_query_county: true
+  address_query_county: false
   broker_routing_information: true
   recaptcha_enabled: false
   security_questions: false
@@ -265,14 +265,15 @@ aca:
     transmit_scheduled_employers: true
     employer_transmission_day_of_month: 16
   transmit_employers_immediately: false
-  employer_has_sic_field: true
-  validate_county: true
+  employer_has_sic_field: false
+  display_referred_by: false
+  validate_county: false
 
   use_simple_employer_calculation_model: false
   carrier_special_plan_identifier_namespace: "urn:MA:terms:v1:plan:super_group_id#"
   offerings_constrained_to_service_areas: true
-  employer_attestation: true
-  enforce_employer_attestation: true
+  employer_attestation: false
+  enforce_employer_attestation: false
   plan_match_tool: false
   rating_areas:
     - R-MA001
