--- a/config/settings.yml
+++ b/config/settings.yml
@@ -138,7 +138,7 @@ checkbook_services:
     current_year: 2019
     previous_year: 2018
     plan_match: "DC"
-    checkbook_services_congress_url: "https://staging.checkbookhealth.org/shop/dc/api?environment=test&from=dchbx" # This Needs to go to Chef
+    checkbook_services_congress_url: "https://staging.checkbookhealth.org/congress/dc/api?environment=test&from=dchbx" # This Needs to go to Chef
     checkbook_services_ee_url: "https://staging.checkbookhealth.org/shop/dc/api?environment=test&from=dchbx"
 
 aptc_errors:
