--- a/config/settings.yml
+++ b/config/settings.yml
@@ -17,6 +17,20 @@ site:
   social_media:
     facebook_url: ""
 
+plan_option_titles:
+  sole_source: 'Single Plan'
+  metal_level: 'By Metal Level'
+  single_carrier: 'By Carrier'
+  single_plan: 'Single Plan'
+
+plan_option_descriptions:
+  sole_source: "Choose one plan and your contribution amount. All employees can enroll in that plan."
+  metal_level: "Choose a benefit level and your contribution amount. Your employees will be able to choose a plan offered by any insurance carrier at that benefit level."
+  single_carrier: "Choose an insurance carrier and your contribution amount. Your employees will be able to choose a plan from that carrier at any benefit level."
+  single_plan: "Choose one plan and your contribution amount. All employees can enroll in that plan."
+  dental:
+    single_plan: "For Dental coverage, you will choose one dental plan from one carrier as the option that all of your employees can enroll in."
+
 contact_center:
   name: "DC Health Link's Customer Care Center"
   alt_name: "DC Health Link Customer Service"
@@ -33,6 +47,8 @@ aca:
   market_kinds: ["individual", "shop"]
   employer_has_sic_field: false
   employer_has_county_validation: false
+  plan_options_available: ["single_plan", "single_carrier", "metal_level"]
+  dental_plan_options_available: ["single_carrier", "custom"]
 #
   qle:
     with_in_sixty_days: 60
