--- a/config/settings.yml
+++ b/config/settings.yml
@@ -138,8 +138,9 @@ checkbook_services:
     current_year: 2019
     previous_year: 2018
     plan_match: "DC"
-    checkbook_services_congress_url: "https://staging.checkbookhealth.org/congress/dc/api?environment=pvt&from=dchbx" # This Needs to go to Chef
-    checkbook_services_ee_url: "https://staging.checkbookhealth.org/shop/dc/api?environment=pvt&from=dchbx"
+    #Note Settings for PVT Enrionment This needs be in chef
+    checkbook_services_congress_url: "https://staging.checkbookhealth.org/congress/dc/api?environment=pvt&from=dchbx"
+    checkbook_services_ee_url: "https://staging.checkbookhealth.org/shop/dc/api?environment=pvt&from=dchbx" 
     ivl_path: "https://staging.checkbookhealth.org/hie/dc/api?environment=pvt"
 
 aptc_errors:
