--- a/system/config/templates/features/aca_individual_market/aca_individual_market.yml
+++ b/system/config/templates/features/aca_individual_market/aca_individual_market.yml
@@ -10,3 +10,6 @@ registry:
         settings:
           - key: :effective_period
             item: <%= Date.new(2020,6,6)..Date.new(2020,9,15) %>
+      - key: :send_secure_message_ivl
+        item: :send_secure_message
+        is_enabled: true
