--- a/components/benefit_markets/Gemfile
+++ b/components/benefit_markets/Gemfile
@@ -10,7 +10,7 @@ gemspec
 # Git. Remember to move these dependencies to your gemspec before releasing
 # your gem to rubygems.org.
 
-gem 'resource_registry',  git: 'https://github.com/ideacrew/resource_registry.git', branch: 'branch_0.7.0'
+gem 'resource_registry',  git:  'https://github.com/ideacrew/resource_registry.git', branch: 'master'
 
 # To use a debugger
 # gem 'byebug', group: [:development, :test]
