--- a/system/config/templates/features/enroll_app/enroll_app.yml
+++ b/system/config/templates/features/enroll_app/enroll_app.yml
@@ -37,3 +37,5 @@ registry:
         settings:
           - key: :period
             item: :annual
+          - key: :age_eligibility
+            item: 26
