ref: 88792 changes item key name.

--- a/system/config/templates/features/enroll_app/enroll_app.yml
+++ b/system/config/templates/features/enroll_app/enroll_app.yml
@@ -37,5 +37,5 @@ registry:
         settings:
           - key: :period
             item: :annual
-          - key: :age_eligibility
+          - key: :cut_off_age
             item: 26
