ref: 88920 Using saml for end point.

--- a/config/saml.yml
+++ b/config/saml.yml
@@ -14,3 +14,6 @@ account_conflict_url: "https://too_many_accounts"
 account_recovery_url: "https://account_recovery"
 iam_login_url: "https://iam_login_url"
 curam_broker_dashboard: "https://"
+kp_pay_now: "https://uat-pci.healthplan.com/paysafe/v1/UATStateDCExchange"
+kp_pay_now_private_key_location: "https://"
+kp_pay_now_x509_cert_location: "https://"
