--- a/system/config/templates/features/enroll_app/enroll_app.yml
+++ b/system/config/templates/features/enroll_app/enroll_app.yml
@@ -26,3 +26,9 @@ registry:
             item: "https://dchealthlink.com/smallbusiness/"
           - key: :nondiscrimination_notice_url
             item: "https://www.dchealthlink.com/nondiscrimination"
+      - key: :pay_now_functionality
+        item: "kaiser_enabled"
+        is_enabled: true
+        settings:
+        - key: :carriers
+          item: 'Kaiser'
