--- a/config/saml.yml
+++ b/config/saml.yml
@@ -14,6 +14,7 @@ account_conflict_url: "https://too_many_accounts"
 account_recovery_url: "https://account_recovery"
 iam_login_url: "https://iam_login_url"
 curam_broker_dashboard: "https://"
+kp_pay_now_issuer: "https://"
 kp_pay_now_url: "https://"
 kp_pay_now_private_key_location: "https://"
 kp_pay_now_x509_cert_location: "https://"
