--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -8,22 +8,22 @@
 AllCops:
   TargetRubyVersion: 2.5
   Exclude:
-    - './bin/**/*'
-    - './project_gems/effective_datatables-2.6.14/effective_datatables-2.6.14.gemspec'
-    - './node_modules/**/*'
-    - './db/seedfiles/**/*'
-    - './lib/tasks/**/*'
-    - './script/**/*'
-    - './components/benefit_markets/spec/dummy/**/*'
-    - './components/benefit_markets/db/seedfiles/**/*'
-    - './components/benefit_sponsors/spec/dummy/**/*'
-    - './components/benefit_sponsors/db/seedfiles/**/*'
-    - './components/notifier/spec/dummy/**/*'
-    - './components/old_sponsored_benefits/**/*'
-    - './components/sponsored_benefits/spec/dummy/**/*'
-    - './components/transport_profiles/spec/dummy/**/*'
-    - './components/transport_profiles/spec/dummy/**/*'
-    - './eyes/enroll.eye.rb'
+    - "./bin/**/*"
+    - "./project_gems/effective_datatables-2.6.14/effective_datatables-2.6.14.gemspec"
+    - "./node_modules/**/*"
+    - "./db/seedfiles/**/*"
+    - "./lib/tasks/**/*"
+    - "./script/**/*"
+    - "./components/benefit_markets/spec/dummy/**/*"
+    - "./components/benefit_markets/db/seedfiles/**/*"
+    - "./components/benefit_sponsors/spec/dummy/**/*"
+    - "./components/benefit_sponsors/db/seedfiles/**/*"
+    - "./components/notifier/spec/dummy/**/*"
+    - "./components/old_sponsored_benefits/**/*"
+    - "./components/sponsored_benefits/spec/dummy/**/*"
+    - "./components/transport_profiles/spec/dummy/**/*"
+    - "./components/transport_profiles/spec/dummy/**/*"
+    - "./eyes/enroll.eye.rb"
 
 # TODO: RWC
 Layout/CommentIndentation:
@@ -69,6 +69,9 @@ Layout/TrailingEmptyLines:
 Layout/IndentationWidth:
   Enabled: true
 
+Layout/LineLength:
+  Max: 250
+
 Layout/Tab:
   Enabled: true
 
@@ -86,9 +89,6 @@ Metrics/CyclomaticComplexity:
 
 Metrics/BlockLength:
   Enabled: false
-
-Metrics/LineLength:
-  Max: 250
 
 Metrics/MethodLength:
   Max: 50
@@ -121,6 +121,15 @@ Style/ExpandPathArguments:
 Style/HashSyntax:
   Enabled: false
 
+Style/HashEachMethods:
+  Enabled: true
+
+Style/HashTransformKeys:
+  Enabled: true
+
+Style/HashTransformValues:
+  Enabled: true
+
 Style/NumericPredicate:
   Enabled: false
 
@@ -144,7 +153,6 @@ Gemspec/OrderedDependencies:
 
 require:
   - ./cops/lint/empty_rescue_clause.rb
-
 # Deprecated
 # Style/TrailingBlankLines:
 #   Enabled: false
