--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -81,6 +81,9 @@ Metrics/AbcSize:
 Metrics/ClassLength:
   Max: 300
 
+Metrics/ModuleLength:
+  Max: 300
+
 Metrics/CyclomaticComplexity:
   Max: 8
 
