comment out last line

--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -225,4 +225,4 @@ jobs:
   #       run: |
   #         NODE_ENV=test RAILS_ENV=test ./bin/webpack
   #     - name: run tests
-        run: ${{matrix.command_configs.test_command}}
+  #       run: ${{matrix.command_configs.test_command}}
