--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -93,6 +93,9 @@ Metrics/BlockLength:
 Metrics/MethodLength:
   Max: 50
 
+Metrics/ModuleLength:
+  Max: 300
+
 Metrics/PerceivedComplexity:
   Max: 15
 
