--- a/config/saml.yml
+++ b/config/saml.yml
@@ -18,3 +18,4 @@ kp_pay_now_issuer: "https://"
 kp_pay_now_url: "https://"
 kp_pay_now_private_key_location: "https://"
 kp_pay_now_x509_cert_location: "https://"
+kp_pay_now_audience: "https://"
