ref: 89325 Adds relay state and fixes specs.

--- a/config/saml.yml
+++ b/config/saml.yml
@@ -19,3 +19,4 @@ kp_pay_now_url: "https://"
 kp_pay_now_private_key_location: "https://"
 kp_pay_now_x509_cert_location: "https://"
 kp_pay_now_audience: "https://"
+kp_relay_state: "https://"
