update rubocop step

--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -28,8 +28,8 @@ jobs:
           bundle install --jobs 4 --retry 3
       - name: Run rubocop
         run: |
-          git fetch --no-tags origin
-          bundle exec rubocop-git origin/master
+          git fetch --no-tags --depth=1 origin master
+          bundle exec rubocop-git origin/master | grep "no offenses detected"
   testing_matrix:
     name: ${{matrix.command_configs.name}}
     needs: [rubocop]
