--- a/system/config/templates/features/enroll_app/sep_types.yml
+++ b/system/config/templates/features/enroll_app/sep_types.yml
@@ -125,7 +125,7 @@ registry:
               enum: [{date_of_event: Date of Event},
               {first_of_this_month: First of Event Month},
               {fixed_first_of_next_month: First of Month after Event},
-              {fifteenth_of_the_month_effective_date: Event First of Next Month},
+              {fifteenth_of_the_month: Event First of Next Month},
               {first_of_month_plan_selection: First of the Month following Plan Selection},
               {fifteenth_of_month_plan_selection: 15th of Month Plan Shopping},
               {first_of_reporting_month: First of Reporting Month},
