Refs #88640, revert rubocop validations that were added earlier

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -72,7 +72,7 @@ Layout/IndentationWidth:
 Layout/LineLength:
   Max: 250
 
-Layout/IndentationStyle:
+Layout/Tab:
   Enabled: true
 
 Layout/TrailingWhitespace:
