refs #89770 changed ui text

--- a/system/config/templates/features/enroll_app/enroll_app.yml
+++ b/system/config/templates/features/enroll_app/enroll_app.yml
@@ -31,3 +31,10 @@ registry:
       - key: :send_secure_message_family
         item: :send_secure_message
         is_enabled: true
+
+      - key: :sep_carousel_message
+        item: :sep_carousel
+        is_enabled: true
+        settings:
+          - key: :effective_period
+            item: <%= Date.new(2020,9,18)..Date.new(2021,3,31) %>
