--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1,5 +1,5 @@
 site:
-  key: :dc
+  key: :ct
   subdomain: "dchbx"
   domain_name: "dchealthlink.com"
   site_title: "DC's Online Health Insurance Marketplace"
@@ -136,9 +136,9 @@ invoices:
   minimum_invoice_display_year: 2015
 
 aca:
-  state_key : "dc"
-  state_name: "District of Columbia"
-  state_abbreviation: "DC"
+  state_key : "ct"
+  state_name: "Connecticut"
+  state_abbreviation: "CT"
   market_kinds: ["shop", "individual", "fehb"]
 
   hbx_abbreviation: "DC Health Benefit Exchange"
@@ -391,7 +391,7 @@ aptc_errors:
 
 style:
   primary_orange: '#333333'
-  brand_primary: '#007bc4'
+  brand_primary: '#005e81'
   primary_color:  '#007bc4'
   primary_notification: '#333333'
   primary_panel: '#69A30D'
