--- a/components/benefit_sponsors/spec/dummy/config/settings.yml
+++ b/components/benefit_sponsors/spec/dummy/config/settings.yml
@@ -390,9 +390,9 @@ style:
   primary_color:  '#007bc4'
   primary_notification: '#333333'
   primary_panel: '#69A30D'
-  primary_button: '#e72b2d'
+  primary_button: '#005e81'
   primary_button_color: '#286090'
-  primary_button_disabled: '#337ab7'
+  primary_button_disabled: '#005e81'
   primary_button_border_disabled: '#2e6da4'
   alternate_header_color: '#333333'
   primary_icon_color: '#333333'
