--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1,10 +1,10 @@
 site:
-  key: :ct
+  key: :cca
   subdomain: "dchbx"
   domain_name: "dchealthlink.com"
-  site_title: "DC's Online Health Insurance Marketplace"
+  site_title: "Access Health Connecticut"
   home_url: "https://www.dchealthlink.com/"
-  home_business_url: "https://www.dchealthlink.com/smallbusiness/overview"
+  home_business_url: "https://www.accesshealthct.com/AHCT/LandingPageCTHIX"
   # copyright_period_start: "2013"
   help_url: "https://www.dchealthlink.com/help"
   # faqs_url: "https://www.dchealthlink.com/Frequently-Asked-Questions"
@@ -14,16 +14,16 @@ site:
   main_web_address_url: "https://www.dchealthlink.com/"
   invoice_bill_url: "https://www.e-billexpress.com/ebpp/DCHEALTHPAY/"
   payment_pdf_url: "pdf/employers_paying_your_premiums_online.pdf"
-  user_sign_in_url: "https://www.dchealthlink.com/"
-  website_name: "www.DCHealthLink.com"
-  main_web_address: "www.DCHealthLink.com"
+  user_sign_in_url: "https://www.accesshealthct.com/AHCT/LandingPageCTHIX"
+  website_name: "https://www.accesshealthct.com/AHCT/LandingPageCTHIX"
+  main_web_address: "https://www.accesshealthct.com/AHCT/LandingPageCTHIX"
   health_care_website: "www.healthcare.gov"
   health_care_website_url: "https://www.healthcare.gov"
-  short_name: "DC Health Link"
-  byline: "Welcome to the District's Health Insurance Marketplace"
-  long_name: "District of Columbia Health Link"
-  header_message: "Welcome to the District's Health Insurance Marketplace"
-  logo_file_name: "logo.png"
+  short_name: "Access Health Connecticut"
+  byline: "Connecticut's Official Health Insurance Marketplace"
+  long_name: "Access Health Connecticut"
+  header_message: "Connecticut's Official Health Insurance Marketplace"
+  logo_file_name: "logo_ct.png"
   make_their_premium_payments_online: "https://www.e-billexpress.com/ebpp/DCHEALTHPAY/"
   tab_icon: 'favicon.ico'
   mailer_logo_file_name: "dchealthlink.jpg"
@@ -61,7 +61,7 @@ site:
   block_ie_browser_after: <%= Date.new(2020,6,1) %>
   publisher: "dchl"
 
-  exchange_name: "Washington DC Health Benefit Exchange"
+  exchange_name: "Access Health Connecticut"
   social_media:
     facebook_url: ""
 
@@ -79,12 +79,12 @@ contact_center:
   payment_phone_number: "855-532-LINK"
   ivl_number: "1-877-623-6765"
   ivl_phone_number: "1-877-623-6765"
-  email_address: "info@dchealthlink.com"
+  email_address: "smallbusiness@accesshealthconnecticut.org"
   po_box: "PO Box 97022"
   city: "Washington"
   state: "DC"
   zip_code: "20090"
-  small_business_email: "info@dchealthlink.com"
+  small_business_email: "smallbusiness@accesshealthconnecticut.org"
   non_discrimination_email: "info@dchealthlink.com"
 
   appeals: "info@dchealthlink.com"
@@ -390,18 +390,18 @@ aptc_errors:
 #   ShopPlanYearPublishedDueDayOfMonth = ShopOpenEnrollmentBeginDueDayOfMonth
 
 style:
-  primary_orange: '#333333'
-  brand_primary: '#005e81'
-  primary_color:  '#007bc4'
-  primary_notification: '#333333'
-  primary_panel: '#69A30D'
-  primary_button: '#e72b2d'
-  primary_button_color: '#286090'
-  primary_button_disabled: '#337ab7'
-  primary_button_border_disabled: '#2e6da4'
-  alternate_header_color: '#333333'
-  primary_icon_color: '#333333'
-  qle_header_color: '#333333'
+  primary_orange: '#F0592A'
+  brand_primary: '#F0592A'
+  primary_color:  '#F0592A'
+  primary_notification: '#F0592A'
+  primary_panel: '#F0592A'
+  primary_button: '#F7B319'
+  primary_button_color: '#F7B319'
+  primary_button_disabled: '#F0592A'
+  primary_button_border_disabled: '#F0592A'
+  alternate_header_color: '#F0592A'
+  primary_icon_color: '#F0592A'
+  qle_header_color: '#F0592A'
   primary_header_font: "'Open Sans', serif"
 
 external_applications:
