Tweak HbxProfile seed for CT

--- a/db/seedfiles/dc/fixtures/owner_organization_3191d463c7704714b39043b45e6b46b9.yaml
+++ b/db/seedfiles/dc/fixtures/owner_organization_3191d463c7704714b39043b45e6b46b9.yaml
@@ -25,7 +25,7 @@ attributes: !ruby/hash:BSON::Document
     cms_id: DC0
     created_at: 2015-10-10 00:11:19.711000000 Z
     updated_at: 2015-10-10 00:11:19.711000000 Z
-    us_state_abbreviation: DC
+    us_state_abbreviation: CT
     is_benefit_sponsorship_eligible: true
     office_locations:
     - !ruby/hash:BSON::Document
