try to identify more flaky tests

--- a/.github/workflows/cucumber-report.yml
+++ b/.github/workflows/cucumber-report.yml
@@ -1,8 +1,9 @@
 name: cucumber report
 on:
-  schedule:
-    # every monday at 4am
-    - cron: '0 4 * * 1'
+  push
+  # schedule:
+  #   # every monday at 4am
+  #   - cron: '0 4 * * 1'
 
 jobs:
   cucumber-report:
