--- a/.github/workflows/rspec-report.yml
+++ b/.github/workflows/rspec-report.yml
@@ -1,8 +1,9 @@
 name: rspec report
 on:
-  schedule:
-    # every monday at 4am
-    - cron: '0 4 * * 1'
+  push
+  # schedule:
+  #   # every monday at 4am
+  #   - cron: '0 4 * * 1'
 
 jobs:
   rspec-report:
