--- a/.github/workflows/cucumber-report.yml
+++ b/.github/workflows/cucumber-report.yml
@@ -1,9 +1,5 @@
 name: cucumber report
-on:
-  # push
-  schedule:
-    # every monday at 4am
-    - cron: '0 4 * * 1'
+on: workflow_dispatch
 
 jobs:
   cucumber-report:
