refs #89588, Retire exact_date effective_on_kind, replace with date_of_event.

--- a/components/benefit_markets/db/seedfiles/cca/fixtures/qles/qle_5992951baca7d42b23000017.yaml
+++ b/components/benefit_markets/db/seedfiles/cca/fixtures/qles/qle_5992951baca7d42b23000017.yaml
@@ -5,7 +5,7 @@ attributes: !ruby/hash:BSON::Document
     raw_data: !binary |-
       WZKVG6yn1CsjAAAX
   effective_on_kinds:
-  - exact_date
+  - date_of_event
   is_active: true
   title: Court order to provide coverage for someone
   tool_tip: ''
