update jobs to run concurrently

--- a/.github/workflows/full-suite.yml
+++ b/.github/workflows/full-suite.yml
@@ -148,11 +148,11 @@ jobs:
           bundle config path ../../vendor/bundle
           rspec_booster --job ${{ matrix.group }}/${{ strategy.job-total }}
   rspec:
-    needs: [rubocop, engines, benefit-sponsors]
+    needs: [rubocop]
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        group: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
+        group: [1, 2, 3, 4, 5]
     steps:
       - uses: actions/checkout@v2
       - uses: ruby/setup-ruby@v1
@@ -190,11 +190,11 @@ jobs:
       - name: Run tests
         run: rspec_booster --job ${{ matrix.group }}/${{ strategy.job-total }}
   cucumber:
-    needs: [rubocop, engines, benefit-sponsors]
+    needs: [rubocop]
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        group: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
+        group: [1, 2, 3, 4, 5]
     steps:
       - uses: actions/checkout@v2
       - uses: ruby/setup-ruby@v1
