--- a/components/benefit_sponsors/db/seedfiles/cca/fixtures/site_cca.yaml
+++ b/components/benefit_sponsors/db/seedfiles/cca/fixtures/site_cca.yaml
@@ -1,14 +1,14 @@
 --- !ruby/object:BenefitSponsors::Site
-__selected_fields: 
+__selected_fields:
 attributes: !ruby/hash:BSON::Document
   _id: !ruby/object:BSON::ObjectId
     raw_data: !binary |-
       WxWP5J+ICzHOaeVu
   site_key: :cca
   byline: The Right Place for the Right Plan
-  short_name: Access Health
+  short_name: Cover Me
   domain_name: hbxshop.org
-  long_name: Connecticut Access Health
+  long_name: Maine Cover Me
   copyright_period_start: '2018'
   site_organizations_count: 9
   updated_at: 2018-06-04 19:15:50.700000000 Z
