--- a/components/benefit_sponsors/spec/dummy/config/settings.yml
+++ b/components/benefit_sponsors/spec/dummy/config/settings.yml
@@ -385,16 +385,16 @@ aptc_errors:
 #   ShopPlanYearPublishedDueDayOfMonth = ShopOpenEnrollmentBeginDueDayOfMonth
 
 style:
-  primary_orange: '#333333'
-  brand_primary: '#007bc4'
-  primary_color:  '#007bc4'
-  primary_notification: '#333333'
+  primary_orange: '#487ba2'
+  brand_primary: '#487ba2'
+  primary_color:  '#487ba2'
+  primary_notification: '#487ba2'
   primary_panel: '#69A30D'
   primary_button: '#005e81'
   primary_button_color: '#286090'
   primary_button_disabled: '#005e81'
   primary_button_border_disabled: '#2e6da4'
-  alternate_header_color: '#333333'
-  primary_icon_color: '#333333'
-  qle_header_color: '#333333'
+  alternate_header_color: '#487ba2'
+  primary_icon_color: '#487ba2'
+  qle_header_color: '#487ba2'
   primary_header_font: "'Open Sans', serif"
